--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,10 +13,13 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="src/Item.js"></script>
+  <script type="text/javascript" src="src/Estimul.js"></script>
 
 
   <!-- include spec files here... -->
+  <script type="text/javascript" src="spec/EstimulSpec.js"></script>
   <script type="text/javascript" src="spec/ItemSpec.js"></script>
+
 
 
 </head>
