--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,11 +14,13 @@
   <!-- include source files here... -->
   <script type="text/javascript" src="src/Item.js"></script>
   <script type="text/javascript" src="src/Estimul.js"></script>
+  <script type="text/javascript" src="src/Questionari.js"></script>
 
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/EstimulSpec.js"></script>
   <script type="text/javascript" src="spec/ItemSpec.js"></script>
+  <script type="text/javascript" src="spec/QuestionariSpec.js"></script>
 
 
 
