--- a/test2.html
+++ b/test2.html
@@ -1,24 +1,22 @@
 <html>
 
 <head>
-  <script type="text/javascript" src="src/Item.js"></script>
-  <script type="text/javascript" src="src/Estimul.js"></script>
-  <script type="text/javascript" src="src/Questionari.js"></script>
-  <script type="text/javascript">
-     Q = new Questionari("Títol questionari","Instruccions completes del questionari, hauràs d'emplenar...","Instruccions");
-     var Repostes = ["Roig","Negre","Blanc","Verd"];
-     item = new ItemComboBox("De quin color era el cavall blanc de Santiago?",Repostes,666,false);
-     item.generarPregunta();
-     E= new Estimul("Enunciat de l'estimul del cavall",[item]);
-     E.generarEstimul();
-     Q.Add(E);
-     Q.generarHTML();
-     document.write(Q.html);
+  <script type='text/javascript' src='src/DocumentQ.js'></script>
+  <script type='text/javascript'>
+    window.onload = function() {
+      data = "{\"Document\":{\"Questionari\":{\"Titol\":\"El questionari del cavall blanc\",\"Instruccions\":\"Les instruccions del questionari per anar omplint i tal\",\"TitolInstruccions\":\"Instruccions\",\"Estimuls\":[{\"Enunciat\":\"Enunciat, nomes tenim un enunciat ja que nomes tenim un estimul\",\"Preguntes\":[{\"Enunciat\":\"De quin color era el cavall blanc de Santiago? (combo)\",\"Id\":\"1\",\"Obligatoria\":\"false\",\"tipus\":2,\"Respostes\":[\"roig\",\"blanc\",\"verd\",\"negre\"]},{\"Enunciat\":\"De quin color era el cavall blanc de Santiago? (Radiobutton)\",\"Id\":\"2\",\"Obligatoria\":\"true\",\"tipus\":3,\"Respostes\":[\"roig\",\"blanc\",\"verd\",\"negre\"]}]}]}}}";
+      IniDocument('document', data);
+      }
   </script>
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel='stylesheet' type='text/css' href='css/style.css' />
 </head>
 
 <body>
 
+  <div id='document'>
+
+  </div>
 </body>
+
+
 </html>
