--- a/test2.html
+++ b/test2.html
@@ -6,16 +6,14 @@
     var client = new XMLHttpRequest();
 
     function carrega() {
-      IniDocument('document', client.responseText);
+      IniDocument('document', document.getElementById('jsontext').value);
     }
 
-    function ompliTextArea() {
-      alert(client.responseText);
+    function ompliTextArea() {      
       document.getElementById('jsontext').value = client.responseText;
     }
     window.onload = function() {
       client.open('GET', './Example.json',false);
-  //    client.onload = ompliTextArea();
       client.send();
       ompliTextArea();
     }
